Add a missing instruction to the installation guide. Add the /tmp/ folder, currently unused.
Shorten some things.

--- a/templates/panel_backups.html
+++ b/templates/panel_backups.html
@@ -9,7 +9,5 @@
 			<a href="/panel/backups/{{.SQLURL}}" class="panel_tag panel_right_button">{{lang "panel_backups_download"}}</a>
 		</span>
 	</div>
-	{{else}}
-	<div class="rowitem rowmsg">{{lang "panel_backups_no_backups"}}</div>
-	{{end}}
+	{{else}}<div class="rowitem rowmsg">{{lang "panel_backups_no_backups"}}</div>{{end}}
 </div>
