Begin work on making the analytics panes somewhat usable when having JavaScript disabled.
Very minor refactoring here and there across the software.
Save some allocations here and there.

--- a/templates/account_own_edit_mfa.html
+++ b/templates/account_own_edit_mfa.html
@@ -20,9 +20,7 @@
 			<div class="rowitem rowmsg" style="white-space:pre-wrap;">{{lang "account_mfa_scratch_explanation"}}</div>
 		</div>
 		<div id="panel_mfa_scratches" class="colstack_item rowlist">
-			{{range .Something}}
-			<div class="rowitem">{{.}}</div>
-			{{end}}
+			{{range .Something}}<div class="rowitem">{{.}}</div>{{end}}
 		</div>
 	</main>
 </div>
