--- a/templates/guilds_create_guild.html
+++ b/templates/guilds_create_guild.html
@@ -18,9 +18,9 @@
 				<div class="formitem formlabel"><a>Visibility</a></div>
 				<div class="formitem">
 					<select name="group_privacy">
-						<option val="0">Public</option>
-						<option val="1">Protected</option>
-						<option val="2">Private</option>
+						<option value=0>Public</option>
+						<option value=1>Protected</option>
+						<option value=2>Private</option>
 					</select>
 				</div>
 		</div>
