--- a/templates/panel_analytics_active_memory.html
+++ b/templates/panel_analytics_active_memory.html
@@ -2,10 +2,11 @@
 	<div class="rowitem">
 		<h1>{{lang "panel_statistics_active_memory_head"}}</h1>
 		<select form="timeRangeForm" class="typeSelector to_right autoSubmitRedirect" name="mtype">
-			<option val="0"{{if eq .MemType 0}} selected{{end}}>{{lang "panel_statistics_memory_type_total"}}</option>
-			<option val="1"{{if eq .MemType 1}} selected{{end}}>{{lang "panel_statistics_memory_type_stack"}}</option>
-			<option val="2"{{if eq .MemType 2}} selected{{end}}>{{lang "panel_statistics_memory_type_heap"}}</option>
+			<option value="0"{{if eq .MemType 0}} selected{{end}}>{{lang "panel_statistics_memory_type_total"}}</option>
+			<option value="1"{{if eq .MemType 1}} selected{{end}}>{{lang "panel_statistics_memory_type_stack"}}</option>
+			<option value="2"{{if eq .MemType 2}} selected{{end}}>{{lang "panel_statistics_memory_type_heap"}}</option>
 		</select>
+		<noscript><input form="timeRangeForm" type="submit" /></noscript>
 		{{template "panel_analytics_time_range_month.html" . }}
 	</div>
 </div>
