--- a/templates/guilds_view_guild.html
+++ b/templates/guilds_view_guild.html
@@ -18,21 +18,21 @@
 	</nav>
 	<div style="clear: both;"></div>
 </div>
-<main id="forum_topic_list" class="rowblock topic_list" style="position: relative;z-index: 50;">
-	{{range .ItemList}}<div class="rowitem topic_left passive datarow" style="background-image: url({{.Creator.Avatar}});background-position: left;background-repeat: no-repeat;background-size: 64px;padding-left: 72px;{{if .Sticky}}background-color: #FFFFCC;{{else if .IsClosed}}background-color: #eaeaea;{{end}}">
-		<span class="topic_inner_right rowsmall" style="float: right;">
+<main id="forum_topic_list" class="rowblock topic_list" style="position:relative;z-index:50;">
+	{{range .ItemList}}<div class="rowitem topic_left passive datarow" style="background-image:url({{.Creator.Avatar}});background-position:left;background-repeat:no-repeat;background-size:64px;padding-left:72px;{{if .Sticky}}background-color:#FFFFCC;{{else if .IsClosed}}background-color:#eaeaea;{{end}}">
+		<span class="topic_inner_right rowsmall" style="float:right;">
 			<span class="replyCount">{{.PostCount}} replies</span><br />
 			<span class="lastReplyAt">{{.LastReplyAt}}</span>
 		</span>
 		<span>
 			<a class="rowtopic" href="{{.Link}}">{{.Title}}</a>
 			<br /><a class="rowsmall" href="{{.Creator.Link}}">Starter: {{.Creator.Name}}</a>
-			{{if .IsClosed}}<span class="rowsmall topic_status_e topic_status_closed" title="Status: Closed"> | &#x1F512;&#xFE0E{{end}}</span>
+			{{if .IsClosed}}<span class="rowsmall topic_status_e topic_status_closed" title="{{lang "status.closed_tooltip"}}"> | &#x1F512;&#xFE0E{{end}}</span>
 		</span>
 	</div>
-	<div class="rowitem topic_right passive datarow" style="background-image: url({{.LastUser.Avatar}});background-position: left;background-repeat: no-repeat;background-size: 64px;padding-left: 72px;">
+	<div class="rowitem topic_right passive datarow" style="background-image:url({{.LastUser.Avatar}});background-position:left;background-repeat:no-repeat;background-size:64px;padding-left:72px;">
 		<span>
-			<a href="{{.LastUser.Link}}" class="lastName" style="font-size: 14px;">{{.LastUser.Name}}</a><br>
+			<a href="{{.LastUser.Link}}" class="lastName" style="font-size:14px;">{{.LastUser.Name}}</a><br>
 			<span class="rowsmall lastReplyAt">Last: {{.LastReplyAt}}</span>
 		</span>
 	</div>
