--- a/templates/register.html
+++ b/templates/register.html
@@ -6,12 +6,12 @@
 	<div class="rowblock the_form">
 		<form action="/accounts/create/submit/" method="post">
 			<div class="formrow">
-				<div class="formitem formlabel"><a id="username_label">{{lang "register_account_name"}}</a></div>
-				<div class="formitem"><input name="username" type="text" placeholder="{{lang "register_account_name"}}" aria-labelledby="username_label" required /></div>
+				<div class="formitem formlabel"><a id="name_label">{{lang "register_account_name"}}</a></div>
+				<div class="formitem"><input name="name" type="text" placeholder="{{lang "register_account_name"}}" aria-labelledby="name_label" required /></div>
 			</div>
 			<div class="formrow">
-				<div class="formitem formlabel"><a id="email_label">{{lang "register_account_email"}}</a></div>
-				<div class="formitem"><input name="email" type="email" placeholder="joe.doe@example.com" aria-labelledby="email_label" required /></div>
+				<div class="formitem formlabel"><a id="email_label">{{if not .Something}}{{lang "register_account_email"}}{{else}}{{lang "register_account_email_optional"}}{{end}}</a></div>
+				<div class="formitem"><input name="email" type="email" placeholder="joe.doe@example.com" aria-labelledby="email_label"{{if not .Something}} required{{end}} /></div>
 			</div>
 			<div class="formrow">
 				<div class="formitem formlabel"><a id="password_label">{{lang "register_account_password"}}</a></div>
