Encode tiffs too.
Update file extension lists.
Update mod floater.

--- a/templates/topics_mod_floater.html
+++ b/templates/topics_mod_floater.html
@@ -6,9 +6,9 @@
 		</div>
 		<div class="mod_floater_body">
 			<select class="mod_floater_options">
-				<option val="delete">{{lang "topic_list.moderate_delete"}}</option>
-				<option val="lock">{{lang "topic_list.moderate_lock"}}</option>
-				<option val="move">{{lang "topic_list.moderate_move"}}</option>
+				<option value="delete">{{lang "topic_list.moderate_delete"}}</option>
+				<option value="lock">{{lang "topic_list.moderate_lock"}}</option>
+				<option value="move">{{lang "topic_list.moderate_move"}}</option>
 			</select>
 			<button class="mod_floater_submit">{{lang "topic_list.moderate_run"}}</button>
 		</div>
