Experiment with <img> instead of backgrounds in userinfo on Nox and Cosora.

--- a/templates/topic_alt.html
+++ b/templates/topic_alt.html
@@ -37,9 +37,7 @@
 				{{range .Poll.QuickOptions}}
 				<div class="poll_option">
 					<input form="poll_{{$.Poll.ID}}_form" id="poll_option_{{.ID}}" name="poll_option_input" type="checkbox" value="{{.ID}}" />
-					<label class="poll_option_label" for="poll_option_{{.ID}}">
-						<div class="sel"></div>
-					</label>
+					<label class="poll_option_label" for="poll_option_{{.ID}}"><div class="sel"></div></label>
 					<span id="poll_option_text_{{.ID}}" class="poll_option_text">{{.Value}}</span>
 				</div>
 				{{end}}
