--- a/templates/topic_alt_quick_reply.html
+++ b/templates/topic_alt_quick_reply.html
@@ -1,6 +1,6 @@
 <div class="rowblock topic_reply_container">
 	<div class="userinfo" aria-label="{{lang "topic.your_information"}}">
-		<div class="avatar_item" style="background-image:url({{.CurrentUser.Avatar}}),url(/s/white-dot.jpg);">&nbsp;</div>
+		<img class="aitem" src="{{.CurrentUser.Avatar}}" alt="Avatar">
 		<div class="user_meta">
 			<a href="{{.CurrentUser.Link}}" class="the_name" rel="author">{{.CurrentUser.Name}}</a>
 			<div class="tag_block">
