Very incomplete adminlogs. Only user edit so far.
Inline error when there aren't any reglogs, modlogs or adminlogs.
Hide the email on a reglog, if the user didn't insert one.

Add panel_logs_registration_no_logs phrase.
Add panel_logs_moderation_no_logs phrase.
Add panel_logs_administration_action_user_edit phrase.
Add panel_logs_administration_action_unknown phrase.
Add panel_logs_administration_no_logs phrase.

--- a/templates/panel_inner_menu.html
+++ b/templates/panel_inner_menu.html
@@ -78,7 +78,7 @@
 	{{if eq .Zone "logs"}}
 		<div class="rowitem passive submenu"><a href="/panel/logs/regs/">{{lang "panel_menu_logs_registrations"}}</a></div>
 		<div class="rowitem passive submenu"><a href="/panel/logs/mod/">{{lang "panel_menu_logs_moderators"}}</a></div>
-		{{if .CurrentUser.Perms.ViewAdminLogs}}<div class="rowitem passive submenu"><a>{{lang "panel_menu_logs_administrators"}}</a></div>{{end}}
+		{{if .CurrentUser.Perms.ViewAdminLogs}}<div class="rowitem passive submenu"><a href="/panel/logs/admin/">{{lang "panel_menu_logs_administrators"}}</a></div>{{end}}
 	{{end}}
 </div>
 <div class="colstack_item colstack_head">
