--- a/templates/panel_group_edit_perms.html
+++ b/templates/panel_group_edit_perms.html
@@ -14,7 +14,7 @@
 			<div class="formitem">
 				<a>{{.LangStr}}</a>
 				<div class="to_right">
-					<select name="group-perm-{{.Name}}">
+					<select name="perm-{{.Name}}">
 						<option{{if .Toggle}} selected{{end}} value=1>{{lang "option_yes"}}</option>
 						<option{{if not .Toggle}} selected{{end}} value=0>{{lang "option_no"}}</option>
 					</select>
@@ -37,7 +37,7 @@
 			<div class="formitem">
 				<a>{{.LangStr}}</a>
 				<div class="to_right">
-					<select name="group-perm-{{.Name}}">
+					<select name="perm-{{.Name}}">
 						<option{{if .Toggle}} selected{{end}} value=1>{{lang "option_yes"}}</option>
 						<option{{if not .Toggle}} selected{{end}} value=0>{{lang "option_no"}}</option>
 					</select>
