--- a/templates/panel_groups.html
+++ b/templates/panel_groups.html
@@ -24,12 +24,12 @@
 	<form action="/panel/groups/create/?s={{.CurrentUser.Session}}" method="post">
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_groups_create_name"}}</a></div>
-			<div class="formitem"><input name="group-name" type="text" placeholder="{{lang "panel_groups_create_name_placeholder"}}" /></div>
+			<div class="formitem"><input name="name" type="text" placeholder="{{lang "panel_groups_create_name_placeholder"}}" /></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_groups_create_type"}}</a></div>
 			<div class="formitem">
-				<select name="group-type"{{if not .CurrentUser.Perms.EditGroupGlobalPerms}} disabled{{end}}>
+				<select name="type"{{if not .CurrentUser.Perms.EditGroupGlobalPerms}} disabled{{end}}>
 					<option selected>Member</option>
 					<option{{if not .CurrentUser.Perms.EditGroupSuperMod}} disabled{{end}}>Mod</option>
 					<option{{if not .CurrentUser.Perms.EditGroupAdmin}} disabled{{end}}>Admin</option>
@@ -39,7 +39,7 @@
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_groups_create_tag"}}</a></div>
-			<div class="formitem"><input name="group-tag" type="text" /></div>
+			<div class="formitem"><input name="tag" type="text" /></div>
 		</div>
 		<div class="formrow form_button_row">
 			<div class="formitem"><button name="panel-button" class="formbutton">{{lang "panel_groups_create_button"}}</button></div>
