Adminlogs: Forum Manager Actions. Shave off a few bytes in the templates.
Add forum_unknown phrase.
Add panel_logs_administration_action_forum_reorder phrase.
Add panel_logs_administration_action_forum_create phrase.
Add panel_logs_administration_action_forum_delete phrase.
Add panel_logs_administration_action_forum_edit phrase.

--- a/templates/panel_forum_edit.html
+++ b/templates/panel_forum_edit.html
@@ -14,8 +14,8 @@
 	<div class="formrow">
 		<div class="formitem formlabel"><a>{{lang "panel_forum_active"}}</a></div>
 		<div class="formitem"><select name="forum_active">
-			<option{{if .Active}} selected{{end}} value="1">{{lang "option_yes"}}</option>
-			<option{{if not .Active}} selected{{end}} value="0">{{lang "option_no"}}</option>
+			<option{{if .Active}} selected{{end}} value=1>{{lang "option_yes"}}</option>
+			<option{{if not .Active}} selected{{end}} value=0>{{lang "option_no"}}</option>
 		</select></div>
 	</div>
 	<div class="formrow">
