--- a/templates/panel_forums.html
+++ b/templates/panel_forums.html
@@ -46,8 +46,8 @@
 		<div class="formrow">
 		<div class="formitem formlabel"><a>{{lang "panel.forums_active_label"}}</a></div>
 			<div class="formitem"><select name="active">
-				<option selected value="1">{{lang "option_yes"}}</option>
-				<option value="0">{{lang "option_no"}}</option>
+				<option selected value=1>{{lang "option_yes"}}</option>
+				<option value=0>{{lang "option_no"}}</option>
 			</select></div>
 		</div>
 		<div class="formrow">
