Finish up the adminlogs. Throw an error instead of updating a word filter that doesn't exist. Track a bit of extra data for word filter updates.
Shorten the prefixes of the adminlog phrases from panel_logs_administration_ to panel_logs_admin_
Add a bunch of new adminlog phrases.
Tweak the word filter phrases.

Add the extra column to the moderation_logs and administration_logs tables.

You need to run the updater / patcher for this commit.

--- a/templates/panel_adminlogs.html
+++ b/templates/panel_adminlogs.html
@@ -1,5 +1,5 @@
 <div class="colstack_item colstack_head">
-	<div class="rowitem"><h1>{{lang "panel_logs_administration_head"}}</h1></div>
+	<div class="rowitem"><h1>{{lang "panel_logs_admin_head"}}</h1></div>
 </div>
 <div id="panel_modlogs" class="colstack_item rowlist loglist">
 	{{range .Logs}}
@@ -15,7 +15,7 @@
 	</div>
 	{{else}}
 	<div class="rowitem rowmsg">
-		<a>{{lang "panel_logs_administration_no_logs"}}</a>
+		<a>{{lang "panel_logs_admin_no_logs"}}</a>
 	</div>
 	{{end}}
 </div>
