--- a/templates/panel_reglogs.html
+++ b/templates/panel_reglogs.html
@@ -1,22 +1,16 @@
 <div class="colstack_item colstack_head">
-	<div class="rowitem"><h1>{{lang "panel_logs_registration_head"}}</h1></div>
+	<div class="rowitem"><h1>{{lang "panel_logs_reg_head"}}</h1></div>
 </div>
-<div id="panel_modlogs" class="colstack_item rowlist loglist">
+<div id="panel_reglogs" class="colstack_item rowlist loglist">
 	{{range .Logs}}
 	<div class="rowitem panel_compactrow{{if not .Success}} bg_red{{end}}">
-		<span class="to_left{{if not .Success}} panel_registration_attempt{{end}}">
-			<span>{{if not .Success}}{{lang "panel_logs_registration_attempt"}}: {{end}}{{.Username}}{{if .Email}} ({{lang "panel_logs_registration_email"}}: {{.Email}}){{end}}{{if .ParsedReason}} ({{lang "panel_logs_registration_reason"}}: {{.ParsedReason}}){{end}}</span>
-			{{if $.CurrentUser.Perms.ViewIPs}}<br /><small title="{{.IP}}">{{.IP}}</small>{{end}}
-		</span>
-		<span class="to_right">
-			<span title="{{.DoneAt}}">{{.DoneAt}}</span>
-		</span>
-		<div style="clear:both;"></div>
+		<span>{{if not .Success}}{{lang "panel_logs_reg_attempt"}}{{end}}{{.Username}}{{if .Email}} ({{lang "panel_logs_reg_email"}}{{.Email}}){{end}}{{if .ParsedReason}} ({{lang "panel_logs_reg_reason"}}{{.ParsedReason}}){{end}}</span>
+		<div class="logdetail">
+			{{if $.CurrentUser.Perms.ViewIPs}}<small class="to_left" title="{{.IP}}">{{.IP}}</small>{{end}}
+			<span class="to_right"><small title="{{.DoneAt}}">{{.DoneAt}}</small></span>
+			<div style="clear:both;"></div>
+		</div>
 	</div>
-	{{else}}
-	<div class="rowitem rowmsg">
-		<a>{{lang "panel_logs_registration_no_logs"}}</a>
-	</div>
-	{{end}}
+	{{else}}<div class="rowitem rowmsg"><a>{{lang "panel_logs_reg_no_logs"}}</a></div>{{end}}
 </div>
 {{template "paginator.html" . }}
