NoEmbeds privacy and config settings. Phase out url_prefix and url_name. Eliminate some boilerplate and allocations while we're at it. Reduce the number of conditional statements in url validator loops. Better parsing of Site.URL to handle user error better.
You will have to run the patcher / updater for this commit.

--- a/templates/account_menu.html
+++ b/templates/account_menu.html
@@ -7,6 +7,7 @@
 	<div class="colstack_item rowmenu">
 		<div class="rowitem passive"><a href="/user/edit/password/">{{lang "account_menu_password"}}</a></div>
 		<div class="rowitem passive"><a href="/user/edit/email/">{{lang "account_menu_email"}}</a></div>
+		<div class="rowitem passive"><a href="/user/edit/privacy/">{{lang "account_menu_privacy"}}</a></div>
 		<!--<div class="rowitem passive"><a href="/user/edit/notifications/">{{lang "account_menu_notifications"}}</a> <span class="account_soon">Coming Soon</span></div>-->
 		<div class="rowitem passive"><a href="/user/edit/logins/">{{lang "account_menu_logins"}}</a></div>
 		<div class="rowitem passive"><a href="/user/edit/blocked/">{{lang "account_menu_blocked"}}</a></div>
