--- a/templates/panel_themes_widgets_widget.html
+++ b/templates/panel_themes_widgets_widget.html
@@ -14,8 +14,8 @@
 	<div class="formitem formlabel"><a>{{lang "panel_themes_widgets_enabled"}}</a></div>
 	<div class="formitem">
 		<select name="wenabled">
-			<option{{if .Enabled}} selected{{end}} value="1">{{lang "option_yes"}}</option>
-			<option{{if not .Enabled}} selected{{end}} value="0">{{lang "option_no"}}</option>
+			<option{{if .Enabled}} selected{{end}} value=1>{{lang "option_yes"}}</option>
+			<option{{if not .Enabled}} selected{{end}} value=0>{{lang "option_no"}}</option>
 		</select>
 	</div>
 </div>
