--- a/templates/topics_quick_topic.html
+++ b/templates/topics_quick_topic.html
@@ -1,7 +1,7 @@
 <input form="quick_post_form" id="has_poll_input" name="has_poll" value=0 type="hidden" />
 <div class="formrow topic_content_row">
 	<div class="formitem">
-		<textarea form="quick_post_form" id="input_content" name="topic-content" placeholder="{{lang "quick_topic.content_placeholder"}}" required></textarea>
+		<textarea form="quick_post_form" id="input_content" name="content" placeholder="{{lang "quick_topic.content_placeholder"}}" required></textarea>
 	</div>
 </div>
 <div class="formrow poll_content_row auto_hide">
